# video-chat-demo

./: .dockerignore  .gitignore  CHAT_SERVER.md  COOLIFY_ENV_VARS.md  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml
.backup/frontend-react-vite/: .env.example
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  livekit_service.py  main.py  models.py
backend/app/routes/: auth.py  rooms.py  tokens.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  routes-manifest.json  trace  trace-build
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  server-reference-manifest.json
frontend/.next/standalone/: package.json  server.js
frontend/.next/types/: routes.d.ts  (+1 more)
frontend/app/: globals.css  page.tsx
frontend/components/: chat-panel.tsx  control-bar.tsx  join-form.tsx  video-grid.tsx  video-room.tsx
frontend/hooks/: useAuth.ts  useChat.ts
frontend/lib/: api.ts  auth.ts  background-processor.ts  backgrounds.ts  chat.ts  conversation.ts  db.ts  server-auth.ts
frontend/src/: App.tsx  vite-env.d.ts
video-chat-demo/: package-lock.json  package.json
video-chat-demo/app/: layout.tsx  page.tsx
video-chat-demo/components/: control-bar.tsx  join-form.tsx  participant-list.tsx  video-grid.tsx  video-room.tsx
(+164 files in other folders)
