[project]
name = "video-chat-backend"
version = "0.1.0"
description = "FastAPI backend for LiveKit video chat"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "livekit-api>=0.11.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

